--- a/src/index.css
+++ b/src/index.css
@@ -446,6 +446,7 @@ input:checked + .carousel__slide-container .nav label {
   width: 48px;
   height: 48px;
   position: absolute;
+  /* 화면 정중앙 처리 */
   left: 0;
   right: 0;
   top: 0;
