--- a/src/index.css
+++ b/src/index.css
@@ -217,6 +217,8 @@ footer a:hover {
 .profile__logout {
   color: gray;
   font-size: 14px;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .profile__logout:focus,
