--- a/src/index.css
+++ b/src/index.css
@@ -185,6 +185,10 @@ footer a:hover {
   padding: 20px 0;
 }
 
+.post__text--pre-wrap {
+  white-space: pre-wrap;
+}
+
 /* profile */
 
 .profile__box {
